--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,8 @@
     <body class="text-center">
       <form class="form-signin" action="/login" method="POST">
         <img class="mb-4" src="./static/LOGO1024BkDC_ni.svg" alt="" width="128" height="128">
-        <h1 class="h3 mb-3 font-weight-normal">Minecraft更換帳號 2022 交大中部電資寒訓</h1>
+        <h3 class="h3 mb-3 font-weight-normal">2022 交大中部電資寒訓</h3>
+        <h1 class="h3 mb-3 font-weight-normal">Minecraft更換帳號 </h1>
         <p>請輸入您無法登入的帳號密碼以更換一組</p>
         <label for="inputUser" class="sr-only">帳號</label>
         <input id="inputUser" type="text" name="uid" class="form-control" placeholder="壞掉的MC EMAIL" required autofocus>
