--- a/templates/login.html
+++ b/templates/login.html
@@ -9,14 +9,18 @@
       <title>Minecraft更換帳號 - 中部電資寒訓</title>
       <!-- Bootstrap core CSS -->
       <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+      <style type="text/css">
+        img.rounded-corners {
+          border-radius: 50%;
+        }
+      </style>
       <!-- Custom styles for this template -->
       <link href="https://getbootstrap.com/docs/4.0/examples/sign-in/signin.css" rel="stylesheet">
     </head>
   
     <body class="text-center">
       <form class="form-signin" action="/login" method="POST">
-        <img class="mb-4" src="./static/LOGO1024BkDC_ni.svg" alt="" width="128" height="128">
+        <img class="mb-4" src="./static/logo.png" alt="logo" width="128" height="128" class="rounded-corners">
         <h4 class="h4 mb-4 font-weight-normal">2022 交大中部電資寒訓</h4>
         <h3 class="h3 mb-3 font-weight-normal">Minecraft更換帳號</h3>
         <p>請輸入您無法登入的帳號密碼以更換一組</p>
