--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
   
     <body class="text-center">
       <form class="form-signin" action="/login" method="POST">
-        <img class="mb-4" src="./static/logo.png" alt="logo" width="128" height="128" class="rounded-corners">
+        <img class="mb-4 rounded-corners" src="./static/logo.png" alt="logo" width="128" height="128">
         <h4 class="h4 mb-4 font-weight-normal">2022 交大中部電資寒訓</h4>
         <h3 class="h3 mb-3 font-weight-normal">Minecraft更換帳號</h3>
         <p>請輸入您無法登入的帳號密碼以更換一組</p>
